# schnitzel

./: .clangd  .gitignore  .gitmodules  .scalafmt.conf  CMakeLists.txt  README.md  build.mill  build.sbt  compile_commands.json  inst.chisel  justfile  main.py  out.txt  pixi.toml  pyproject.toml  setup.py  verilator_command.sh
.github/workflows/: build.yml  docker.yml  easyfloat-lit-tests.yml  lint.yml  phs-kernels-snake.yml  simulate.yml  test.yml
cmake/: riscv-toolchain.cmake  riscv64gc-toolchain.cmake
host/: CMakeLists.txt  CMakeLists.txt_old  Makefile  crt0.S  executorch_options.txt  host.c  host.ld  link.ld  main.cpp  model2_data.h  model3_data.h  objdump  retarget.c  retarget.cpp  syscalls.c  test.c
kernels/gemm/: gemm_rescale.py
kernels/streamer_phs_accumulation/: Snakefile  accumulation.mlir  main.cpp  schedule.mlir  test_software.mlir
kernels/streamer_phs_alu/: Snakefile  addition.mlir  main.cpp  test_software.mlir  transform_schedule.mlir
kernels/streamer_phs_aluf/: Snakefile  addf.mlir  gendata.py  main.c  main.cpp  test_software.mlir
runtime/include/: memref.h
sim/: .gitignore  CMakeLists.txt
sim/include/: axi_interface.h  dpi_memory.h  sim.h
sim/rtl/: MemDpi.sv  TopWrapper.sv
sim/src/: axi_interface.cpp  dpi_host.cpp  dpi_memory.cpp  dynamic_memory.cpp  main.cpp  memory.cpp  sim.cpp
snaxc/accelerators/: acc_context.py  snax_gemmx.py
snaxc/dialects/: accfg.py  hardfloat.py  phs.py  snax.py  snax_stream.py
snaxc/hw/: __init__.py  acc_context.py  accelerator.py  config_parser.py  configurable_accelerator.py  dispatching.py  gemmini.py  phs_accelerator.py  rocc.py  snax.py  snax_alu.py  snax_gemmx.py  snax_hwpe_mult.py  snax_phs.py  snax_xdma.py  streamer_accelerator.py  system.py
snaxc/hw/accelerators/: alu.py  dma.py  phs.py
snaxc/hw/streamers/: streamers.py
snaxc/hw/streamers/extensions/: __init__.py  add_extension.py  maxpool_extension.py  memset_extension.py  rescale_extension.py  rescale_up_extension.py  streamer_extension.py  transpose_extension.py
snaxc/ir/dart/: scheduler.py
snaxc/phs/: combine_arrays.py  encode.py  export_to_schnitzel.py  hw_conversion.py  instantiate_array.py  template_spec.py
snaxc/tools/: config_parser.py  configs.py  phsc_main.py  snax_opt_main.py  snaxc_main.py
snaxc/transforms/: __init__.py  accfg_dedup.py  convert_accfg_to_csr.py  convert_dart_to_snax_stream.py  convert_linalg_to_accfg.py  convert_snax_to_llvm.py  convert_stream_to_accfg.py  copy_to_dma.py  dispatch_kernels.py  dispatch_regions.py  insert_accfg_op.py  insert_sync_barrier.py  memref_to_snax.py  set_memory_layout.py  set_memory_space.py  snax_allocate.py  snax_copy_to_dma.py  snax_to_func.py
snaxc/transforms/dart/: dart_scheduler.py
snaxc/transforms/hardfloat/: convert_hardfloat_to_hw.py
snaxc/transforms/phs/: convert_pe_to_hw.py  dispatch_linalg_phs.py  encode.py  hw_scalarize_public_modules.py  instantiate_pe_array.py  prune_unused_carries.py
snaxc/transforms/pipeline/: construct_pipeline.py
snaxc/util/: dispatching_rules.py
spitchel/: CMakeLists.txt  REFactorING.md
spitchel/include/: axi_interface.h  dynamic_memory.h  loader.h  memory.h  sim.h
spitchel/src/: axi_interface.cpp  dynamic_memory.cpp  loader.cpp  main.cpp  memory.cpp  memory.h  sim.cpp  spitchel.cpp  spitchel.h
src/main/resources/: ibex-dv  ibex-ip  ibex-rtl  lc-ctrl
src/main/resources/cva6/: .gitignore  CVA6Wrapper.sv  Makefile  cv64a6_imafdc_sv39_config_pkg.sv  cva6_wrapper.sv  out
src/main/resources/ibex/: .gitignore  IbexWrapper.sv  Makefile  ibex  ibex_wrapper.sv
src/main/scala/accelerator/: Accelerator.scala  AluAccelerator.scala  PhsAccelerator.scala
src/main/scala/axi/: AXIDemux.scala  AXIMux.scala  Axi.scala  AxiToMem.scala  DecoupledIOToAXI.scala  Types.scala
src/main/scala/cluster/: Cluster.scala  PhsCluster.scala
src/main/scala/config/: Config.scala
src/main/scala/core/: ALU.scala  BigCore.scala  Bus.scala  CSR.scala  CVA6.scala  ControlUnit.scala  Core.scala  CoreConfig.scala  Decoder.scala  DecoupledCore.scala  Ibex.scala  InstructionFetch.scala  Insts.scala  LSU.scala  MemoryAccess.scala  Opcodes.scala  RegisterFile.scala  Rocket.scala  WriteBack.scala
src/main/scala/csr/: CsrCombiner.scala  CsrDemux.scala  CsrInterface.scala  HWBarrier.scala  Types.scala
src/main/scala/datapath/: Alu.scala  BlackBox.scala
src/main/scala/dma/: Dma.scala
src/main/scala/icache/: ICache.scala  (+1 more)
sw/: CMakeLists.txt  main.c
sw/bootrom/: CMakeLists.txt  bootrom.S
sw/cmake/: mlir_source.cmake
sw/common/htif/: htif_runtime.c  htif_runtime.h
sw/common/mlir/: memref.hh
sw/device/: CMakeLists.txt
sw/device/apps/: CMakeLists.txt  alu_accelerator_test.c  alu_mask_test.c  alu_reduction_test.c  csr_test.c  dma_test.c  dma_test.cpp  hello_world.c  simple_copy.cpp
sw/device/runtime/: CMakeLists.txt  crt0.S  ibex-toolchain.cmake  link.ld  runtime.h
sw/device/runtime/dma/: CMakeLists.txt
sw/device/runtime/dma/include/: dma.h  dma.hh
sw/device/runtime/dma/src/: dma.cpp  dma_memcpy.mlir
sw/host/: CMakeLists.txt  crt0.S  hello_world.cpp  host.c
sw/host/apps/: CMakeLists.txt  hello_floats.cpp  hello_world.cpp
sw/host/apps/hello_torch/: .gitignore  CMakeLists.txt  custom_kernel.cpp  hello_torch.cpp  kernels.yml  model_dispatch.py
sw/host/runtime/: cva6-toolchain.cmake  link.ld  runtime.h  syscalls.c
sw/runtime/: CMakeLists.txt  crt0.S  link.ld  runtime.h
sw/runtime/sim/: htif_runtime.c  putchar.c
tests/: lit.cfg
tests/apps/: CMakeLists.txt  alu_accelerator_test.txt  alu_mask_test.txt  alu_reduction_test.txt  csr_test.c  dma_test.c  dma_test.txt  hello_torch.txt  hello_world.c  hello_world.txt
tests/dialects/: test_accfg.py
tests/dialects/phs/: test_phs_combine_arrays.py
tests/filecheck/: lit.cfg  test_system_config.json
tests/filecheck/transforms/: snax-allocate-minimalloc.mlir  snax-allocate-static.mlir  snax_to_func.mlir  snax_to_llvm.mlir
tests/inference/: test_accfg_state_tracing.py
util/: Dockerfile  gendata.py
util/cmake/: cva6-toolchain.cmake  ibex-toolchain.cmake
util/tracing/: trace_to_perfetto.py
(+40 files in other folders)
